testing for salary calcs

--- a/retirement.ipynb
+++ b/retirement.ipynb
@@ -131,26 +131,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kaiwen\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'ljust'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(name)\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33;43m\"\u001b[39;49m\u001b[33;43m | \u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mljust\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mitem\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36m<genexpr>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(name)\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m | \u001b[39m\u001b[33m\"\u001b[39m.join(\u001b[43mitem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mljust\u001b[49m(\u001b[32m10\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m row))\n",
-      "\u001b[31mAttributeError\u001b[39m: 'int' object has no attribute 'ljust'"
+      "Kaiwen\n",
+      "2026       | 96000.0   \n",
+      "2027       | 98880.0   \n",
+      "2028       | 101846.4  \n",
+      "2029       | 104901.79 \n",
+      "2030       | 108048.85 \n",
+      "2031       | 111290.31 \n",
+      "2032       | 114629.02 \n",
+      "2033       | 118067.89 \n",
+      "2034       | 121609.93 \n",
+      "2035       | 125258.23 \n",
+      "2036       | 129015.97 \n",
+      "2037       | 132886.45 \n",
+      "2038       | 136873.05 \n",
+      "2039       | 140979.24 \n",
+      "2040       | 145208.61 \n",
+      "2041       | 149564.87 \n",
+      "2042       | 154051.82 \n",
+      "2043       | 158673.37 \n",
+      "2044       | 163433.57 \n",
+      "2045       | 168336.58 \n",
+      "2046       | 173386.68 \n",
+      "Lisa\n",
+      "2026       | 110000.0  \n",
+      "2027       | 113300.0  \n",
+      "2028       | 116699.0  \n",
+      "2029       | 120199.97 \n",
+      "2030       | 123805.97 \n",
+      "2031       | 127520.15 \n",
+      "2032       | 131345.75 \n",
+      "2033       | 135286.13 \n",
+      "2034       | 139344.71 \n",
+      "2035       | 143525.05 \n",
+      "2036       | 147830.8  \n",
+      "2037       | 152265.73 \n",
+      "2038       | 156833.7  \n",
+      "2039       | 161538.71 \n",
+      "2040       | 166384.87 \n",
+      "2041       | 171376.42 \n",
+      "2042       | 176517.71 \n",
+      "2043       | 181813.24 \n",
+      "2044       | 187267.64 \n",
+      "2045       | 192885.67 \n",
+      "2046       | 198672.24 \n",
+      "2047       | 204632.4  \n"
      ]
     }
    ],
@@ -161,6 +193,26 @@
     "    print(name)\n",
     "    for row in list:\n",
     "        print(\" | \".join(str(item).ljust(10) for item in row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101846.40000000001"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "96000*1.03*1.03"
    ]
   },
   {
