--- a/retirement.ipynb
+++ b/retirement.ipynb
@@ -49,19 +49,24 @@
    "outputs": [],
    "source": [
     "# people\n",
-    "lisa = Person(\"Lisa\", 1998)\n",
-    "kw = Person(\"Kaiwen\", 1997)\n",
-    "\n",
-    "# age at retirement\n",
+    "lisa = Person(\n",
+    "    name = \"Lisa\", \n",
+    "    birth_year = 1998, \n",
+    "    income = 110_000\n",
+    "    )\n",
+    "kw = Person(\n",
+    "    name = \"Kaiwen\", \n",
+    "    birth_year = 1997,\n",
+    "    income = 96_000\n",
+    "    )\n",
+    "# set age at retirement or year of retirement\n",
     "kw.set_retirement_age(50)\n",
     "lisa.set_retirement_age(50)\n",
     "\n",
-    "# current income\n",
+    "# input current income and current year. Default fill to today\n",
+    "current_year = datetime.date.today().year\n",
     "kw.set_income(96_000)\n",
-    "lisa.set_income(110_000)\n",
-    "\n",
-    "# current year\n",
-    "current_year = datetime.date.today().year"
+    "lisa.set_income(110_000)"
    ]
   },
   {
